prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: lslbd
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
  - host: 'prometheus.thetamilselvan.in'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
  tls:
  - hosts:
    - '*.thetamilselvan.in'
    secretName: prometheus-tls
